Fix min-height main wrap

--- a/scss/sec2.scss
+++ b/scss/sec2.scss
@@ -15,7 +15,7 @@ SECTION 2
 
 .project-main-wrap{
 	@include clearfix;
-	min-height:400px;
+	min-height:300px;
 }
 
 .sec-head{
